--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,8 @@
     display: none;
   }
   #twitch-embed{
-    width:100%;
-    height: 56.25%;
+    width:90vw;
+    height: 50.625vw;
     margin: 0 0 0 20px;
     display: inline-block;
   }
