--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,5 @@
-  body{
-    /*background-image: url(../images/body_background.jpg);*/
-    margin: 0 0 0 0;
-    background-size: cover;
-    transition: 2s ease;
-    background-color: #2A2A2A;
 
-  }
-  .cl_btnHeader{
+  .cl-btnHeader{
       background-color: #C33C54;
       align-self: auto;
       border: none;
@@ -18,11 +11,11 @@
       font-size: 1.125em;
       transition-duration: 0.4s;
     }
-  .cl_btnHeader:hover{
+  .cl-btnHeader:hover{
     background-color: #D88292;
     cursor: pointer;
   }
-  .cl_btnHeader:active{
+  .cl-btnHeader:active{
     background-color: #D88290;
   }
   .questions{
@@ -53,7 +46,7 @@
     width: 100%;
     top: 0;
     left: 0;
-  /*  background-image: url(../images/header_background.jpg);*/
+  /*  background-image: url(../images/header-background.jpg);*/
     background-color: #232323;
   }
   #menu ul{
@@ -63,12 +56,12 @@
   #twitch{
     padding-top: 3.5em;
     width: 100%;
-    color: #D88290;
+    color: #E8E8E8;
   }
   #contact{
     padding-top: 3.5em;
     width: 100%;
-    color: #D88290;
+    color: #E8E8E8;
   }
   #faq{
     padding: 3.5em 0 0 0 ;
